--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <title>Dynamisk Formularvalidering</title>
     <link href="dist/style.css" rel="stylesheet" />
   </head>
-  <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="text-center">
-      <h1 class="text-3xl font-bold text-blue-600 mb-4">
-        Dynamisk Formularvalidering
-      </h1>
-      <button
-        id="clickMe"
-        class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
-      >
-        Click me now
-      </button>
-    </div>
+  <body class="flex items-center justify-center h-screen">
+    <main
+      id="app"
+      class="flex flex-col items-center justify-center w-full px-4"
+    >
+      <div class="text-center"></div>
+    </main>
     <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
